refactor(react): 使用getFirst读取首个工具调用